Bugfix
Fixed the bug in which text "Insira sua data de nascimento" was not showing.

--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -34,7 +34,7 @@ h1 {
 
 label {
   font-size: 1rem;
-  color: #dadada;
+  color: #1e1e1e;
 }
 
 .date-inputs {
